--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
 </head>
 <body>
 	<a href="/arvid/index.html">Go to demo 1 no bootstrap</a>
+	<script>
+		var href = window.location.pathname;
+		var links = document.querySelectorAll('a')
+
+		links.forEach( v => {
+			v.pathname = href.replace('index.html', "") + v.pathname
+		})
+	</script>
 </body>
 </html>
