--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<a href="/arvid/index.html">Go to demo 1 no bootstrap</a>
+	<a href="/arvid/index.html" style="text-decoration: none;">Go to demo 1 no bootstrap</a>
 	<script>
 		var pathName = window.location.pathname;
 		var links = document.querySelectorAll('a')
