--- a/arvid/index.html
+++ b/arvid/index.html
@@ -540,12 +540,12 @@
 				</div>
 				<!-- END-ROW-THREE -->
 
-				<div class="row mt-8 space-x-8">
-					<div class="col-6">
+				<div class="row--4 mt-8">
+					<div class="col">
 						<div class="card">
 							<div class="card__header">
 								<h4>ico token</h4>
-								<div class="card__header__action space-x-2">
+								<div class="card__header__action">
 									<a href="#"><i class='bx bx-refresh' ></i></a>
 									<a href="#"><i class='bx bx-cog'></i></a>
 								</div>
@@ -557,11 +557,11 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-6">
+					<div class="col">
 						<div class="card">
 							<div class="card__header">
 								<h4>ICO Distribution</h4>
-								<div class="card__header__action space-x-2">
+								<div class="card__header__action">
 									<a href="#"><i class='bx bx-refresh' ></i></a>
 									<a href="#"><i class='bx bx-cog'></i></a>
 								</div>
@@ -569,7 +569,7 @@
 							<div class="card__body">
 								<div class="row chart-wrapper">
 									<div class="col-6">
-										<canvas id="doughnut-chart" width="180" height="180"></canvas>
+										<canvas id="doughnut-chart" style="width: 100% !important;height: 100% !important;"></canvas>
 									</div>
 									<div class="col-6 chart-wrapper__progress">
 									</div>
@@ -580,8 +580,8 @@
 				</div>
 				<!-- END-ROW-FOUR -->
 
-				<div class="row mt-8 space-x-8">
-					<div class="col-6">
+				<div class="row--5 mt-8">
+					<div class="col">
 						<div class="card">
 							<div class="card__header">
 								<h4>Buy Token</h4>
@@ -611,7 +611,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-6">
+					<div class="col">
 						<div class="card">
 							<div class="card__header">
 								<h4>Walet Address</h4>
@@ -661,15 +661,11 @@
 				</div>
 				<!-- END-ROW-FIVE -->
 
-				<div class="row mt-8 space-x-8">
-					<div class="col-6">
+				<div class="row--5 mt-8">
+					<div class="col">
 						<div class="card">
 							<div class="card__header">
 								<h4>Transfer coins</h4>
-								<div class="card__header__action space-x-2">
-									<a href="#"><i class='bx bx-refresh' ></i></a>
-									<a href="#"><i class='bx bx-cog'></i></a>
-								</div>
 							</div>
 							<div class="card__body">
 								<form method="POST" class="transfer">
@@ -697,14 +693,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-6">
+					<div class="col">
 						<div class="card">
 							<div class="card__header">
 								<h4>Live My Crypto Prices</h4>
-								<div class="card__header__action space-x-2">
-									<a href="#"><i class='bx bx-refresh' ></i></a>
-									<a href="#"><i class='bx bx-cog'></i></a>
-								</div>
 							</div>
 							<div class="card__body">
 								<ul>
@@ -757,8 +749,8 @@
 				</div>
 				<!-- END-ROW-SIX -->
 
-				<div class="row mt-8 space-x-8">
-					<div class="col-6">
+				<div class="row--5 mt-8">
+					<div class="col">
 						<div class="card">
 							<div class="card__header">
 								<h4>Marketcap</h4>
@@ -814,7 +806,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-6">
+					<div class="col">
 						<div class="card">
 							<div class="card__header">
 								<h4>Recent Transactions</h4>
