test in material kit pro completed

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</style>
 </head>
 <body class="min-h-screen p-8 bg-blue-100">
-	<div class="grid w-full justify-center" 
+	<div class="grid gap-8 w-full justify-center" 
 		style="grid-template-columns: repeat(auto-fit, minmax(300px,500px));">
 		<a href="/arvid/index.html" class="shadow-lg rounded-md">
 			<div class="grid__child relative h-0 rounded-md overflow-hidden" style="padding-top: 60%;">
@@ -38,8 +38,8 @@
 				<div class="absolute w-full left-0 bottom-0 px-6 
 					text-gray-50 font-mono text-left h-0 transition-all duration-500 ease-in-out" 
 					style="box-shadow: 0 -10px 70px 90px rgba(0, 0, 0, 0.7);">
-					<h2 class="text-xl font-black font-sans"
-						style="transform: translateY(-150%);" 
+					<h2 class="font-black font-sans"
+						style="transform: translateY(-150%); font-size: min(4vw,1.25rem);" 
 					>Arvid - Bootstrap Cryptocurrency Admin Dashboard Template Preview - ThemeForest</h2>
 				</div>
 			</div>
