fix line clamp title

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 		.grid__child:hover > :not([hidden]) ~ :not([hidden]) {
 			opacity: 0;
 		}
+
+		.template h2 {
+			display: -webkit-box;
+		  -webkit-line-clamp: 3;
+		  -webkit-box-orient: vertical;  
+		  overflow: hidden;
+		  text-shadow: 0.1em 0.1em #000;
+		}
 	</style>
 </head>
 <body class="min-h-screen p-8 bg-blue-100">
