--- a/material-kit-pro/index.html
+++ b/material-kit-pro/index.html
@@ -8,6 +8,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
+     <!-- popins font google -->
+    <link rel="stylesheet" href="test.css">
+
+    <!-- box-icon -->
+    <link href='https://unpkg.com/boxicons@2.0.8/css/boxicons.min.css' rel='stylesheet'>
+
     <title>Material Kit PRO by Viet Hung</title>
   </head>
   <body>
