--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<style>
 		.template {
 			background-position: top;
-			transition: all 1s ease-in-out;
+			transition: all 2s ease-in-out;
 		}
 		.grid__child:hover .template {
 			background-position: bottom;
@@ -50,11 +50,11 @@
 		<!-- end item 1 -->
 
 		<!-- item 2 -->
-		<a href="material-kit-pro/test.html" class="shadow-lg rounded-md">
+		<a href="purpose/test.html" class="shadow-lg rounded-md">
 			<div class="grid__child relative h-0 rounded-md overflow-hidden" style="padding-top: 60%;">
 				<div class="template absolute w-full h-full rounded-md top-0 left-0
 				  bg-cover overflow-hidden"
-					style="background-image: url('material-kit-pro/images/Screenshot 2021-07-24 at 14-42-00 Learning bootstrap 4.png')">
+					style="background-image: url('purpose/images/Screenshot 2021-07-24 at 14-42-00 Learning bootstrap 4.png')">
 				</div>
 				<div class="absolute w-full right-0 top-4 px-4 
 					text-gray-300 font-mono text-right h-0 transition-all duration-500 ease-in-out" >
@@ -72,6 +72,31 @@
 			</div>
 		</a>
 		<!-- end item 2 -->
+
+		<!-- item 3 -->
+		<a href="purpose/index.html" class="shadow-lg rounded-md">
+			<div class="grid__child relative h-0 rounded-md overflow-hidden" style="padding-top: 60%;">
+				<div class="template absolute w-full h-full rounded-md top-0 left-0
+				  bg-cover overflow-hidden"
+					style="background-image: url('purpose/images/Screenshot 2021-07-31 at 12-45-41 Purpose - Website UI Kit.png')">
+				</div>
+				<div class="absolute w-full right-0 top-4 px-4 
+					text-gray-300 font-mono text-right h-0 transition-all duration-500 ease-in-out" >
+					<span class="w-full flex justify-end text-gray-300">
+						<svg class="transform scale-150 fill-current" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M18.002 2.997H5.999A3.011 3.011 0 0 0 2.997 6v12.002a3.012 3.012 0 0 0 3.002 3.001h12.003a3.012 3.012 0 0 0 3.001-3.001V6a3.012 3.012 0 0 0-3.001-3.003zm-1.64 12.647c-.152.36-.389.68-.693.927a3.594 3.594 0 0 1-1.206.614c-.49.151-1.074.229-1.75.229H7.888V6.909h5.103c.943 0 1.7.213 2.267.646.569.436.854 1.082.854 1.958 0 .528-.13.983-.389 1.357-.259.373-.63.664-1.111.868v.034c.642.135 1.137.438 1.464.912.327.473.493 1.069.493 1.789 0 .405-.078.788-.225 1.147l.02.021v.003zm-2.084-2.589c-.309-.282-.739-.419-1.297-.419H9.737v3.276h3.253c.554 0 .991-.144 1.298-.435.308-.289.464-.701.464-1.229-.005-.518-.156-.919-.464-1.193h-.014.004zm-.451-2.119c.299-.251.444-.613.444-1.084 0-.526-.131-.902-.397-1.116-.264-.214-.646-.326-1.146-.326H9.727v2.898h3.001c.436.001.81-.127 1.099-.372z"></path></svg>
+					</span>
+				</div>
+				<div class="absolute w-full left-0 bottom-0 px-6 
+					text-gray-50 font-mono text-left h-0 transition-all duration-500 ease-in-out" 
+					style="box-shadow: 0 -10px 70px 90px rgba(0, 0, 0, 0.7);">
+					<h2 class="absolute left-0 bottom-4 px-6 font-black font-sans"
+						style="font-size: min(5vw,1.25rem);" 
+					>Purpose - Website UI Kit</h2>
+				</div>
+			</div>
+		</a>
+		<!-- end item 3 -->
+
 	</div>
 </body>
 </html>
